--- a/config.yaml
+++ b/config.yaml
@@ -1,237 +1,266 @@
-# If PERSEUS can find a file 'shadow_{my_config.yaml}', it will attempt to update these
-# values against information in that file.  Keeping a shadow file can be useful for
-# not exposing your private config to the version control system.
+# PERSEUS v0.3 Sample Config (10/15 Rules)
+# ----------------------------------
+# Sample rules, zones, and roles with coverage and messenger relays.
 
-# Network Topology
+rules:
 
-control0:
-  type: control
-  description: Data hub
-  host: localhost  # Or overwrite in shadow
-
-control1:
-  type: control
-  description: Backup data hub
-  host: localhost  # Or overwrite in shadow
-
-listener0:
-  type: listener
-  description: Patient room 0
-  broker: control0
-  # If "sim_data_dir" key exists, the listener will try to read cached data channels from files
-  sim_data_dir: 'samples/DEV-03 sample 1A  NORMAL-  NORMAL RHYTHM + GOOD NORMOXIC PLETH   (5min NSR + 100% SpO2)'
-  host: localhost  # Or overwrite in shadow
-
-listener1:
-  type: listener
-  description: Patient room 1
-  broker: control0
-  sim_data_dir: 'samples/DEV-03 sample 1D  TRUE POSITIVE-  VTACH + GOOD NORMOXIC PLETH   (5min VT + 98% SpO2 [last half of tracing])'
-  host: localhost  # Or overwrite in shadow
-
-display0:
-  type: display
-  broker: control0
-  node: listener0
-  host: localhost  # Or overwrite in shadow
-
-display1:
-  type: display
-  broker: control0
-  node: listener1
-  host: localhost  # Or overwrite in shadow
-
----
-
-# PERSEUS Rule Descriptions
-# September 2015
-# v0.1
-#
 # Device state is matched one by one against rules in the given order.  The _first_ matched rule is returned.
 #
 # Example format:
-#- priority: {max|high|low|none}
+#- priority: {MAX|HIGH|LOW|None}
 #  conditions:
-#    source: [EQ, NOM_ECG_CARD_BEAT_RATE, etc...]       # EQ for strings is a regex
-#    alarm:  [EQ, NOM_EVT_ECG_ASYSTOLE, etc...]
-#    bpm:    [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
-#    spo2:   [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
-#    ecg:    _waveform not qualitatively testable yet_
-#    pleth:  _waveform not qualitatively testable yet_
-#  message:  {none, #various other strings depending on alarm}   # PERSEUS smart alert component of message (160 char for SMS; 240 char for alphatext page)
-#                                                                #   e.g., "MAX.ALERT: Room C-1; Alert# 2;  VTach | HR 122 | No current SpO2 reading"
+#    alarms:
+#      source: [EQ, NOM_ECG_CARD_BEAT_RATE, etc...]
+#      alarm:  [EQ, NOM_EVT_ECG_ASYSTOLE, etc...]
+#    numerics:
+#      bpm:    [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
+#      spo2:   [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
+#    waveform_quality:
+#      ecg:    [GOOD|POOR]
+#      pleth:  [GOOD|POOR]
+#  message:  String that will be formatted with the rule dictionary keys (160 char for SMS; 240 char for alphatext page)
 #
 # LK general notes:  need to specify *source(s)* of alert, i.e., alert_source, as origin of alert_code as a condition
 #                    full alert_code names to avoid potential similar alarms from other sources in Philips system
+#                    e.g., "MAX.ALERT: Room C-1; Alert# 2;  VTach | HR 122 | No current SpO2 reading"
 
 ### MAXIMUM PRIORITY
 
-#0 TESTING
-- priority: high
-  conditions:
-    ecg: ['GT', 8275]
-  message:  "TESTING PEAK ECG | ecg: {ecg}"
-
 #1 [VFIB ALERT]   WITH PULSATILE, SPO2 PLETH   (FALSE POSITIVE)
-- priority: none
+- priority: None
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE]
-    alarm:  [EQ, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]             # Philips system seems to think simulated VFib is VFib *or* asystole->  >>Philips alarm<<
-#    pleth:  [EQ, _qualitatively good signal, pulsatile_]
-  message:  none                                                        # ignoring false positive
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]
+      alert_code:   [EQ, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]           # Philips system seems to think simulated VFib is VFib *or* asystole->  >>Philips alarm<<
+    waveform_quality:
+      pleth:  [EQ, _qualitatively good signal, pulsatile_]
+  alert_str: None                                                               # ignoring false positive
 
 
 #2 VFIB ALERT   WITHOUT PULSATILE SPO2 PLETH
-- priority: max
+- priority: MAX
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE]
-    alarm:  [EQ, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]              # VFib, unknown if true or false alarm->  PERSEUS ALERT
-#    pleth:  [EQ, _qualitatively bad signal_]                                 # Philips system seems to think simulated VFib is VFib *or* asystole->
-  message: "V.FIB"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]
+      alert_code:   [EQ, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]           # VFib, unknown if true or false alarm->  PERSEUS ALERT
+    waveform_quality:
+      pleth:        [EQ, POOR]                                                # Philips system seems to think simulated VFib is VFib *or* asystole->
+  alert_str: "V.FIB"
 
 
 #4 VTACH ALERT   WITH HIGH HEART RATE   WITH PULSATILE SPO2 PLETH (SPO2 VALUE <= 89%)
-- priority: max
+- priority: MAX
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
-    alarm:  [EQ, NOM_EVT_ECG_V_TACHY]                                                         # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    bpm:    [GT, 100]
-#    pleth:  [EQ, _qualitatively good signal, pulsatile_]
-    spo2:   [LTE, 89]
-  message:  "V.TACH | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
+      alert_code:   [EQ, NOM_EVT_ECG_V_TACHY]                                                         # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    numerics:
+      bpm_1:        [GT, 100]
+      spo2:         [LTE, 89]
+    waveform_quality:
+      pleth:        [EQ, GOOD]
+  alert_str:  "V.TACH | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #3 VTACH ALERT   WITH HIGH HEART RATE   WITHOUT PULSATILE PLETH
-- priority: max
+- priority: MAX
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
-    alarm:  [EQ, NOM_EVT_ECG_V_TACHY]                                                         # VTach, unknown if true or false alarm->  PERSEUS ALERT
-    bpm:    [GT, 100]
-#    pleth:  [EQ, _qualitatively bad signal_]
-  message: "V.TACH | Current HR {bpm} bpm | No current SpO2 reading"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
+      alert_code:   [EQ, NOM_EVT_ECG_V_TACHY]          # VTach, unknown if true or false alarm->  PERSEUS ALERT
+    numerics:
+      bpm_1:        [GT, 100]
+    waveform_quality:
+      pleth:        [EQ, POOR]
+  alert_str: "V.TACH | Current HR {bpm} bpm | No current SpO2 reading"
 
 
 ### HIGH PRIORITY
 
 #5 VTACH ALERT   WITH HIGH HEART RATE   WITH PULSATILE SPO2 PLETH (SpO2 VALUE >=90%)
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
-    alarm:  [EQ, NOM_EVT_ECG_V_TACHY]                                                         # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    bpm:    [GT, 100]
-#    pleth:  [EQ, _qualitatively good signal, pulsatile_]
-    spo2:   [GTE, 90]
-  message:  "V.TACH | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
+      alert_code:   [EQ, NOM_EVT_ECG_V_TACHY]           # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    numerics:
+      bpm_1:        [GT, 100]
+      spo2:         [GTE, 90]
+    waveform_quality:
+      pleth:        [EQ, GOOD]
+  alert_str:  "V.TACH | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #6 BRADYCARDIA ALERT   WITH PULSATILE PLETH
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-    alarm:  [EQ, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]            # Bradycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    bpm:    [LTE, 30]                                                               # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-#    pleth:  [EQ, _qualitatively good signal, pulsatile_]
-  message:  "BRADYCARDIA | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+      alert_code:   [EQ, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]     # Bradycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    numerics:
+      bpm_1:        [LTE, 30]                                                       # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
+    waveform_quality:
+      pleth:        [EQ, GOOD]
+  alert_str:  "BRADYCARDIA | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #7 BRADYCARDIA ALERT   WITHOUT PULSATILE PLETH
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-    alarm:  [EQ, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]            # Bradycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
-    bpm:    [LTE, 30]                                                                # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-#    pleth:  [EQ, _qualitatively bad signal_]
-  message:  none                                                                              # defer to Philips system
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+      alert_code:   [EQ, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]      # Bradycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
+    numerics:
+      bpm_1:        [LTE, 30]                                                        # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
+    waveform_quality:
+      pleth:        [EQ, POOR]
+  alert_str:  None                                                                     # defer to Philips system
 
 
 #8 TACHYCARDIA ALERT   WITH PULSATILE PLETH
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-    alarm:  [EQ, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]            # Tachycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    bpm:    [GTE, 140]                                                               # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-#    pleth:  [EQ, _qualitatively good signal, pulsatile_]
-  message:  "TACHYCARDIA | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+      alert_code:   [EQ, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]       # Tachycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    numerics:
+      bpm_1:        [GTE, 140]                                                         # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
+    waveform_quality:
+      pleth:        [EQ, GOOD]
+  alert_str:  "TACHYCARDIA | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #9 TACHYCARDIA ALERT   WITHOUT PULSATILE PLETH
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-    alarm:  [EQ, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]            # Tachycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
-    bpm:    [GTE, 140]                                                               # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-#    pleth:  [EQ, _qualitatively bad signal_]
-  message:  none                                                                              # defer to Philips system
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+      alert_code:   [EQ, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]      # Tachycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
+    numerics:
+      bpm_1:        [GTE, 140]                                                       # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
+    waveform_quality:
+      pleth:        [EQ, POOR]
+  alert_str:  None                                                                     # defer to Philips system
 
 
 #10 BRADYCARDIA TREND ALERT
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards bradycardia, current HR =< 60  ->  PERSEUS ALERT
-    bpm:    [TLT, 60]
-  message:  "HR RAPIDLY TRENDING DOWN | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards bradycardia, current HR =< 60  ->  PERSEUS ALERT
+    numerics:
+      bpm_1:        [TLT, 60]
+  alert_str:  "HR RAPIDLY TRENDING DOWN | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #11 TACHYCARDIA TREND ALERT
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards tachycardia, current HR >= 110  ->  PERSEUS ALERT
-    bpm:    [TGT, 110]
-  message:  "HR RAPIDLY TRENDING UP | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards tachycardia, current HR >= 110  ->  PERSEUS ALERT
+    numerics:
+      bpm_1:        [TGT, 110]
+  alert_str:  "HR RAPIDLY TRENDING UP | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #12 SPO2 HYPOXIA ALERT   WITH PULSATILE PLETH
-- priority: high
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_PULS_OXIM_SAT_O2]                                                      # Hypoxic SpO2 with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    alarm:  [EQ, NOM_EVT_LO*, NOM_EVT_DESAT]
-#    pleth:  [EQ, _qualitatively good signal, pulsatile_]
-    spo2:   [LTE, 89]
-  message:  "HYPOXIA | Current SpO2 {spo2}"
+    alarms:
+      alert_source: [EQ, NOM_PULS_OXIM_SAT_O2]                                                      # Hypoxic SpO2 with pulsatile flow, likely true alarm->  PERSEUS ALERT
+      alert_code:   [EQ, NOM_EVT_LO*, NOM_EVT_DESAT]
+    numerics:
+      spo2:         [LTE, 89]
+    waveform_quality:
+      pleth:        [EQ, GOOD]
+  alert_str:  "HYPOXIA | Current SpO2 {spo2}"
 
 
 ### MEDIUM PRIORITY
 
 #13 SPO2 TREND ALERT
-- priority: medium
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_PULS_OXIM_SAT_O2]                                                      # 5-min trend towards hypoxia, current SpO2 =< 91  ->  PERSEUS ALERT
-    spo2:   [TLT, 91]
-  message:  "SpO2 RAPIDLY TRENDING DOWN | Current SpO2 {spo2}"
+    alarms:
+      alert_source: [EQ, NOM_PULS_OXIM_SAT_O2]                                                      # 5-min trend towards hypoxia, current SpO2 =< 91  ->  PERSEUS ALERT
+    numerics:
+      spo2:         [TLT, 91]
+  alert_str:  "SpO2 RAPIDLY TRENDING DOWN | Current SpO2 {spo2}"
 
 
 #14 HYPOTENSION TREND ALERT
-- priority: medium
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypotension, current SBP =< 110  ->  PERSEUS ALERT
-    spo2:   [TLT, 100]
-  message:  "BP RAPIDLY TRENDING DOWN | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypotension, current SBP =< 110  ->  PERSEUS ALERT
+    numerics:
+      spo2:         [TLT, 100]
+  alert_str:  "BP RAPIDLY TRENDING DOWN | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #15 HYPERTENSION TREND ALERT
-- priority: medium
+- priority: HIGH
   conditions:
-    source: [EQ, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypertension, current SBP >= 180  ->  PERSEUS ALERT
-    spo2:   [TGT, 180]
-  message:  "BP RAPIDLY TRENDING UP | Latest BP {BP} mmHg ({BP_dt} min ago)"
+    alarms:
+      alert_source: [EQ, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypertension, current SBP >= 180  ->  PERSEUS ALERT
+    numerics:
+      spo2:         [TGT, 180]
+  alert_str:  "BP RAPIDLY TRENDING UP | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
----
-
-# Alert Zones
-
-sms_relay:
-  name: PERSEUS.Alert
-  user: shadow
-  pword: shadow
-
+# Assign all hosts to a zone, any host not in a zone will not be assigned to a role
+# A host may appear in more than one zone
 zones:
-  zone0:
-    sources: [listener0]
-    priorities: [high, max]
-    devices: [dereks_phone]
 
-devices:
-  dereks_phone:
-    number: shadow
-    carrier: shadow
+  # Assuming that you are using test logs from the provided sample data
+  zone1:
+    - sample1A
+    - sample1B
+    - sample1C
+
+  zone2:
+    - sample1D
+    - sample1E
+    - sample1F
+
+
+# For each role, assign zones and priorities, and alert relays.  When a host issues an alert,
+# it is passed on to relevant zones and then onto relevant roles for dispatch.
+roles:
+
+  # All alerts
+  team:
+    zones:
+      zone1: [LOW, MEDIUM, HIGH]
+      zone2: [LOW, MEDIUM, HIGH]
+    relays:
+      slack:
+        channel: !!python/object/apply:os.getenv [SLACK_TEST_CHANNEL]
+
+  # All zone1, high zone2
+  zone1_manager:
+    zones:
+      zone1: [LOW, MEDIUM, HIGH]
+      zone2: [HIGH]
+    relays:
+      twilio-sms:
+        number: !!python/object/apply:os.getenv [SMS_TEST_NUMBER]
+
+  # All zone2, high zone 1
+  zone2_manager:
+    zones:
+      zone2: [LOW, MEDIUM, HIGH]
+      zone1: [HIGH]
+    relays:
+      email-sms:
+        number:  !!python/object/apply:os.getenv [SMS_TEST_NUMBER]
+        carrier: !!python/object/apply:os.getenv [SMS_TEST_CARRIER]
+
+  # All high alerts
+  site_manager:
+    zones:
+      zone2: [HIGH]
+      zone1: [HIGH]
+    relays:
+      slack:
+        channel: !!python/object/apply:os.getenv [SLACK_TEST_DMSG]
