Fixes to readme from initial rollout w live data

--- a/config.yaml
+++ b/config.yaml
@@ -9,69 +9,63 @@ rules:
 # Example format:
 #- priority: {MAX|HIGH|LOW|None}
 #  conditions:
-#    alarms:
-#      source: [EQ, NOM_ECG_CARD_BEAT_RATE, etc...]
-#      alarm:  [EQ, NOM_EVT_ECG_ASYSTOLE, etc...]
-#    numerics:
-#      bpm:    [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
-#      spo2:   [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
-#    waveform_quality:
-#      ecg:    [GOOD|POOR]
-#      pleth:  [GOOD|POOR]
+#    alarm_source: [EQ, NOM_ECG_CARD_BEAT_RATE, etc...]
+#    alarm_code:  [EQ, NOM_EVT_ECG_ASYSTOLE, etc...]
+#    bpm:    [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
+#    spo2:   [GT|GTE|LT|LTE|EQ|NEQ|TLT|TGT, value]      # TLT = "trending less than", TGT = "trending greater than"
+#    ecg:    [GOOD|POOR]
+#    pleth:  [GOOD|POOR]
 #  message:  String that will be formatted with the rule dictionary keys (160 char for SMS; 240 char for alphatext page)
 #
-# LK general notes:  need to specify *source(s)* of alert, i.e., alert_source, as origin of alert_code as a condition
-#                    full alert_code names to avoid potential similar alarms from other sources in Philips system
+# LK general notes:  need to specify *source(s)* of alert, i.e., alarm_source, as origin of alarm_code as a condition
+#                    full alarm_code names to avoid potential similar alarms from other sources in Philips system
 #                    e.g., "MAX.ALERT: Room C-1; Alert# 2;  VTach | HR 122 | No current SpO2 reading"
+
+# Derek's Thoughts:  We need to definte an _aggregation function_ and _aggregation interval_ and
+#                    _history Interval_.  Maybe all the same, maybe rule or condition specific
+#                    ie, max(bpm) in last 10 seconds > X or avg(bpm) in last 2 minutes > X.
+#                    History and aggregation may be the same thing -- did any of the 10 second intervals
+#                    over the last 2 minutes have these qualities?
+#                    Another complexity is that the last 30 seconds may be partially incopmlete
 
 ### MAXIMUM PRIORITY
 
 #1 [VFIB ALERT]   WITH PULSATILE, SPO2 PLETH   (FALSE POSITIVE)
 - priority: None
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]
-      alert_code:   [EQ, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]           # Philips system seems to think simulated VFib is VFib *or* asystole->  >>Philips alarm<<
-    waveform_quality:
-      pleth:  [EQ, _qualitatively good signal, pulsatile_]
-  alert_str: None                                                               # ignoring false positive
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE]
+    alarm_code:   [HAS, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]           # Philips system seems to think simulated VFib is VFib *or* asystole->  >>Philips alarm<<
+#    pleth:        [EQ, _qualitatively good signal, pulsatile_]
+  alert_str: None                                                           # ignoring false positive
 
 
 #2 VFIB ALERT   WITHOUT PULSATILE SPO2 PLETH
 - priority: MAX
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]
-      alert_code:   [EQ, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]           # VFib, unknown if true or false alarm->  PERSEUS ALERT
-    waveform_quality:
-      pleth:        [EQ, POOR]                                                # Philips system seems to think simulated VFib is VFib *or* asystole->
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE]
+    alarm_code:   [HAS, NOM_EVT_ECG_ASYSTOLE, NOM_ECG_V_FIB_TACHY]           # VFib, unknown if true or false alarm->  PERSEUS ALERT
+#    pleth:        [EQ, POOR]                                                # Philips system seems to think simulated VFib is VFib *or* asystole->
   alert_str: "V.FIB"
 
 
 #4 VTACH ALERT   WITH HIGH HEART RATE   WITH PULSATILE SPO2 PLETH (SPO2 VALUE <= 89%)
 - priority: MAX
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
-      alert_code:   [EQ, NOM_EVT_ECG_V_TACHY]                                                         # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    numerics:
-      bpm_1:        [GT, 100]
-      spo2:         [LTE, 89]
-    waveform_quality:
-      pleth:        [EQ, GOOD]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
+    alarm_code:   [HAS, NOM_EVT_ECG_V_TACHY]                                                         # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    bpm:          [GT, 100]
+    spo2:         [LTE, 89]
+#    pleth:        [EQ, GOOD]
   alert_str:  "V.TACH | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #3 VTACH ALERT   WITH HIGH HEART RATE   WITHOUT PULSATILE PLETH
 - priority: MAX
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
-      alert_code:   [EQ, NOM_EVT_ECG_V_TACHY]          # VTach, unknown if true or false alarm->  PERSEUS ALERT
-    numerics:
-      bpm_1:        [GT, 100]
-    waveform_quality:
-      pleth:        [EQ, POOR]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
+    alarm_code:   [EQ, NOM_EVT_ECG_V_TACHY]          # VTach, unknown if true or false alarm->  PERSEUS ALERT
+    bpm:          [GT, 100]
+#    pleth:        [EQ, POOR]
   alert_str: "V.TACH | Current HR {bpm} bpm | No current SpO2 reading"
 
 
@@ -80,99 +74,77 @@ rules:
 #5 VTACH ALERT   WITH HIGH HEART RATE   WITH PULSATILE SPO2 PLETH (SpO2 VALUE >=90%)
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
-      alert_code:   [EQ, NOM_EVT_ECG_V_TACHY]           # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    numerics:
-      bpm_1:        [GT, 100]
-      spo2:         [GTE, 90]
-    waveform_quality:
-      pleth:        [EQ, GOOD]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE, NOM_ECG_V_P_C_CNT]
+    alarm_code:   [HAS, NOM_EVT_ECG_V_TACHY]           # VTach with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    bpm:          [GT, 100]
+    spo2:         [GTE, 90]
+#    pleth:        [EQ, GOOD]
   alert_str:  "V.TACH | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #6 BRADYCARDIA ALERT   WITH PULSATILE PLETH
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-      alert_code:   [EQ, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]     # Bradycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    numerics:
-      bpm_1:        [LTE, 30]                                                       # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-    waveform_quality:
-      pleth:        [EQ, GOOD]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+    alarm_code:   [HAS, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]     # Bradycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    bpm:          [LTE, 30]                                                       # *** only if from alarm_source NOM_ECG_CARD_BEAT_RATE
+#    pleth:        [EQ, GOOD]
   alert_str:  "BRADYCARDIA | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #7 BRADYCARDIA ALERT   WITHOUT PULSATILE PLETH
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-      alert_code:   [EQ, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]      # Bradycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
-    numerics:
-      bpm_1:        [LTE, 30]                                                        # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-    waveform_quality:
-      pleth:        [EQ, POOR]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+    alarm_code:   [HAS, NOM_EVT_ECG_BRADY_EXTREME, NOM_EVT_LO*, NOM_EVT_BRADY]      # Bradycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
+    bpm:          [LTE, 30]                                                        # *** only if from alarm_source NOM_ECG_CARD_BEAT_RATE
+#    pleth:        [EQ, POOR]
   alert_str:  None                                                                     # defer to Philips system
 
 
 #8 TACHYCARDIA ALERT   WITH PULSATILE PLETH
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-      alert_code:   [EQ, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]       # Tachycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
-    numerics:
-      bpm_1:        [GTE, 140]                                                         # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-    waveform_quality:
-      pleth:        [EQ, GOOD]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+    alarm_code:   [HAS, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]       # Tachycardic rhythm with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    bpm:          [GTE, 140]                                                         # *** only if from alarm_source NOM_ECG_CARD_BEAT_RATE
+#    pleth:        [EQ, GOOD]
   alert_str:  "TACHYCARDIA | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #9 TACHYCARDIA ALERT   WITHOUT PULSATILE PLETH
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
-      alert_code:   [EQ, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]      # Tachycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
-    numerics:
-      bpm_1:        [GTE, 140]                                                       # *** only if from alert_source NOM_ECG_CARD_BEAT_RATE
-    waveform_quality:
-      pleth:        [EQ, POOR]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE, NOM_PULS_OXIM_SAT_O2]
+    alarm_code:   [HAS, NOM_EVT_ECG_TACHY_EXTREME, NOM_EVT_HI*, NOM_EVT_TACHY]      # Tachycardic rhythm without pulsatile flow, unknown if true or false alarm ->  >>Philips alarm<<
+    bpm:          [GTE, 140]                                                       # *** only if from alarm_source NOM_ECG_CARD_BEAT_RATE
+#    pleth:        [EQ, POOR]
   alert_str:  None                                                                     # defer to Philips system
 
 
 #10 BRADYCARDIA TREND ALERT
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards bradycardia, current HR =< 60  ->  PERSEUS ALERT
-    numerics:
-      bpm_1:        [TLT, 60]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards bradycardia, current HR =< 60  ->  PERSEUS ALERT
+    bpm:          [TLT, 60]
   alert_str:  "HR RAPIDLY TRENDING DOWN | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #11 TACHYCARDIA TREND ALERT
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards tachycardia, current HR >= 110  ->  PERSEUS ALERT
-    numerics:
-      bpm_1:        [TGT, 110]
+    alarm_source: [HAS, NOM_ECG_CARD_BEAT_RATE]                                                    # 5-min trend towards tachycardia, current HR >= 110  ->  PERSEUS ALERT
+    bpm:          [TGT, 110]
   alert_str:  "HR RAPIDLY TRENDING UP | Current HR {bpm} bpm | Current SpO2 {spo2} % | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #12 SPO2 HYPOXIA ALERT   WITH PULSATILE PLETH
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_PULS_OXIM_SAT_O2]                                                      # Hypoxic SpO2 with pulsatile flow, likely true alarm->  PERSEUS ALERT
-      alert_code:   [EQ, NOM_EVT_LO*, NOM_EVT_DESAT]
-    numerics:
-      spo2:         [LTE, 89]
-    waveform_quality:
-      pleth:        [EQ, GOOD]
+    alarm_source: [HAS, NOM_PULS_OXIM_SAT_O2]                                                      # Hypoxic SpO2 with pulsatile flow, likely true alarm->  PERSEUS ALERT
+    alarm_code:   [HAS, NOM_EVT_LO*, NOM_EVT_DESAT]
+    spo2:         [LTE, 89]
+#    pleth:        [EQ, GOOD]
   alert_str:  "HYPOXIA | Current SpO2 {spo2}"
 
 
@@ -181,30 +153,24 @@ rules:
 #13 SPO2 TREND ALERT
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_PULS_OXIM_SAT_O2]                                                      # 5-min trend towards hypoxia, current SpO2 =< 91  ->  PERSEUS ALERT
-    numerics:
-      spo2:         [TLT, 91]
+    alarm_source: [HAS, NOM_PULS_OXIM_SAT_O2]                                                      # 5-min trend towards hypoxia, current SpO2 =< 91  ->  PERSEUS ALERT
+    spo2:         [TLT, 91]
   alert_str:  "SpO2 RAPIDLY TRENDING DOWN | Current SpO2 {spo2}"
 
 
 #14 HYPOTENSION TREND ALERT
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypotension, current SBP =< 110  ->  PERSEUS ALERT
-    numerics:
-      spo2:         [TLT, 100]
+    alarm_source: [HAS, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypotension, current SBP =< 110  ->  PERSEUS ALERT
+    spo2:         [TLT, 100]
   alert_str:  "BP RAPIDLY TRENDING DOWN | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
 #15 HYPERTENSION TREND ALERT
 - priority: HIGH
   conditions:
-    alarms:
-      alert_source: [EQ, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypertension, current SBP >= 180  ->  PERSEUS ALERT
-    numerics:
-      spo2:         [TGT, 180]
+    alarm_source: [HAS, NOM_PRESS_BLD_NONINV_SYS]                                                  # 5-min trend towards hypertension, current SBP >= 180  ->  PERSEUS ALERT
+    spo2:         [TGT, 180]
   alert_str:  "BP RAPIDLY TRENDING UP | Latest BP {BP} mmHg ({BP_dt} min ago)"
 
 
