Fixed and tested setup scripts Bumped to 3.3 and pushed to pypi test

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,7 @@
-include config.yaml README.md perseus3-overview.png
+include config.yaml
+global-include README.md
+include images/*.png
+include TelemetryStream/IntellivueProtocol/*.txt
+include TelemetryStream/IntellivueProtocol/*.pdf
 exclude README.rst
+global-exclude shadow.yaml
