--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 shadow*
 README.rst
 *.pyc
+/DockerSplunk/x00-01-06232016b.json
 old/*
 NOTES.md
 /TelemetryStream/IntellivueProtocol/Philips Data Export Interface Programming Guide.pdf
